--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "Hasnain Shamim",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -19,7 +23,14 @@
     "mongoose": "^5.7.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^11.1.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "validator": "^11.1.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
